new chat dtos to help efficiently fetch data